<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
        android:title = "@string/abilities">
            <item
                android:id="@+id/nav_encrypt"
                android:icon = "@drawable/ic_lock"
                android:title="@string/encrypt" />
            <item
                android:id="@+id/nav_decrypt"
                android:icon = "@drawable/ic_lock_open"
                android:title="@string/decrypt" />
            <item
                android:id="@+id/nav_keygen"
                android:icon = "@drawable/ic_key"
                android:title="@string/keygen" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
        </item>
    </group>
            <item
                android:title = "@string/info">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_about"
                        android:icon = "@drawable/ic_info"
                        android:title="@string/about" />
                </group>
            </menu>
        </item>


</menu>
